@@ -25,9 +25,9 @@
         "chronograph": "git://github.com/CartoDB/chronographjs.git#0.1.0",
         "underscore": "~1.6.0",
         "step": "~0.0.5",
-        "grainstore": "https://github.com/CartoDB/grainstore/tarball/0.21.0",
+        "grainstore": "https://github.com/CartoDB/grainstore/tarball/0.22.0",
         "express": "~2.5.11",
-        "mapnik": "http://github.com/Vizzuality/node-mapnik/tarball/0.7.26-cdb1",
+        "mapnik": "1.4.15",
         "tilelive": "~4.5.3",
         "tilelive-mapnik": "0.6.11",
         "semver": "~1.1.4",
